import React from 'react';
import {
  Platform,
  StyleSheet,
  TextInput,
  type TextInputProps,
  View,
} from 'react-native';

import { ThemedText } from '@/components/themed-text';
import { Fonts, Radius, Spacing } from '@/constants/theme';
import { scaleTextStyleForE2E } from '@/lib/e2e-font-scale';
import { useLanguage } from '@/hooks/use-language';
...
